@@ -8,7 +8,12 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
-L<Krang::Template> now handles calls to find() an arrayref of
+L<Krang::Media> now handles calls to find() with an arrayref of
+site_ids. [Peter]
+
+=item *
+
+L<Krang::Template> now handles calls to find() with an arrayref of
 category_ids. [Peter]
 
 =item * 
